--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-        "@woocommerce/woocommerce-rest-api": "^1.0.1",
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-inview": "^4.5.0",
-    "react-intersection-observer": "^9.7.0"
+    "react-intersection-observer": "^9.7.0",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
