--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
