--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18",
     "react-hook-inview": "^4.5.0",
     "react-intersection-observer": "^9.7.0",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
