--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.2",
     "react-hook-inview": "^4.5.0",
     "react-intersection-observer": "^9.7.0",
     "react-toastify": "^10.0.5",
